Working on fixing styling on mobile.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,29 +60,49 @@ html {
   width: 700px;
 }
 
+@media (max-width: 500px) {
+  .quiz-container {
+    margin-top: 1rem;
+  }
+}
+
 
 
 .question-container {
   position: relative;
   padding: 1rem 2rem;
+  font-size: 1rem;
 }
 
-/* .question-container::after {
-  position: absolute;
-  content: "";
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 1px;
-  background: var(--color-a60);
-} */
+@media (max-width: 675px) {
+  .question-container {
+    position: relative;
+    padding: 1rem 2rem;
+    font-size: 0.875rem;
+  }
+}
+
+@media (max-width: 500x) {
+  .question-container {
+    position: relative;
+    padding: 1rem 1rem;
+    font-size: 0.875rem;
+  }
+}
+
 
 .answer-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 1rem;
-  /* margin-top: 1rem; */
   padding: 1rem 2rem 2rem 2rem;
+}
+
+@media (max-width: 500px) {
+  .answer-container {
+  
+    padding: 1rem 1.5rem 2rem 1.5rem;
+  }
 }
 
 
@@ -96,6 +116,7 @@ html {
   background: var(--color-a40);
   border: 1px solid var(--color-a60);
   border-radius: var(--border-radius-small);
+  font-size: 1rem;
 }
 
 .btn-unanswered:hover {
@@ -215,9 +236,6 @@ html {
   }
 }
 
-
-
-
 .ind-answer-container {
   position: relative;
 }
@@ -254,20 +272,33 @@ html {
 @media (max-width: 500px) {
   .header-wrapper {
     width: calc(100% - 2rem);
-    max-width: 1530px;
+    /* max-width: 1530px;
     margin: 0 auto;
-    background: var(--color-a0);
+    background: var(--color-a0); */
     /* border: 1px solid red; */
+  }
+  .page-wrapper {
+    width: calc(100% - 2rem);
+
   }
 
   
 }
 
 .quiz-header-text-lg {
-  font-size: 1.25rem;
+  font-size: clamp(1.1rem, 3vw + 5px, 1.25rem);
   font-weight: 600;
 }
 
+.question-count-text {
+  font-size: 1rem;
+}
+
+@media (max-width: 500px) {
+  .question-count-text {
+    font-size: 0.875rem;
+  }
+}
 
 .quiz-header-wrapper::after {
   position: absolute;
@@ -457,7 +488,7 @@ html {
 
 @media (max-width: 500px) {
   .header-container {
-padding: 0.4rem 0
+  padding: 0.4rem 0
   }
   .logo-first-letter {
     font-size: 2rem;
@@ -552,8 +583,6 @@ padding: 0.4rem 0
 
 @media (max-width: 675px) {
   .quiz-start-modal-wrapper {
-   
-   
     width: 100%;
   }
 }
@@ -561,10 +590,11 @@ padding: 0.4rem 0
 .quiz-name-header-text {
   position: relative;
   padding: 1rem;
-  font-size: 2rem;
+  font-size: clamp(1.3rem, 3vw + 5px, 1.8rem) ;
   text-transform: capitalize;
   text-align: center;
 }
+
 
 .quiz-name-header-text::after {
   position: absolute;
@@ -581,6 +611,12 @@ padding: 0.4rem 0
   font-size: 0.875rem;
 }
 
+@media (max-width: 500px) {
+  .quiz-start-modal-wrapper  p {
+    padding: 1rem 1.2rem;
+    font-size: 0.875rem;
+  }
+}
 .btn-quiz-start-container {
 
 
